[package]
name = "waitmap"
description = "an awaitable concurrent hash map"
documentation = "https://docs.rs/waitmap"
repository = "https://github.com/withoutboats/waitmap"
license = "MIT OR Apache-2.0"
version = "1.0.1"
authors = ["Without Boats <woboats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.2.0"
dashmap = "3.7.0"

[dev-dependencies.async-std]
version = "1.5.0"
features = ["unstable"]
